# gpgpu-raytrace-the-rainbow

./: .gitignore  CMakeLists.txt  README.md  rainbow.cpp  rainbow.cu
